tests/interpreter/pass/013-max.hyg
assert(max(3, 5) = 5);
assert(max(2.3f, 1.5f) = 2.3f)