tests/interpreter/fail/010-max.hyg
assert(max(1.0f, 0.4f) = 0.4f)